Feature: create simulation info box